--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,8 @@ minimal: false             # use a dark header
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {file: "CV_Sayantan.pdf" , title: "CV"}
-  - {file: "about.md" , title: "About"}
+  - {file: "home.md" , title: "Home"}
+  - {file: "about.md" , title: "About Me"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:sayantan34@gmail.com"}
